# meteo-r

./: Cargo.toml
datasets/: mini.json
migrations/: 20220810165938_init-records.sql  20220821085628_date.sql
src/: error.rs  main.rs
src/controllers/: export.rs  mod.rs  record.rs
src/dtos/: export.rs  mod.rs  record.rs
src/entities/: mod.rs  record.rs
src/repositories/: mod.rs  postgres_repository.rs  record_repository.rs
src/services/: export_service.rs  mod.rs  postgres_service.rs  record_service.rs
